GCA-14 Implement unit tests coverage - fix